fixed: issue with docker

--- a/template.env
+++ b/template.env
@@ -1,6 +1,6 @@
 ENVIRONMENT=[DEVELOPMENT, STAGING, PRODUCTION]
-DATABASE_URL=postgresql+asyncpg://user:password@postgresql:5432/identity
+DATABASE_URL=postgresql+asyncpg://user:password@localhost:9801/identity
 JWT_ALGORITHM=HS256
 SECRET_KEY=SOMETHING
-PORT=9990
+PORT=9993
 REDIS_URL=redis://redis:6379/0
