--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,16 @@
 version: '3'
 services:
+
+  pgadmin:
+    image: dpage/pgadmin4
+    ports:
+      - 9803:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: 'pgadmin4@pgadmin.org'
+      PGADMIN_DEFAULT_PASSWORD: 'admin'
+    depends_on:
+      - postgresql
+  
   fastapi:
     build:
       context: .
@@ -23,3 +34,4 @@ services:
       - 9801:5432
     env_file:
       - pg.env
+
