--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ redis = "^4.5.5"
 httpx = "^0.24.1"
 pytest-asyncio = "^0.21.0"
 greenlet = "^2.0.2"
+pyotp = "^2.8.0"
+qrcode = "^7.4.2"
 
 
 [build-system]
